# ChangeLog for app-antivirus/clamav
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.308 2008/09/13 22:48:04 dertobi123 Exp $

  27 Mar 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  -files/clamav-0.95.1-nls.patch, +clamav-0.97.ebuild,
  +files/clamav-0.97-nls.patch:
  Bump to clamav-0.97, trying to copy most changes from gentoo-x86.

  24 Mar 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  -clamav-0.96.1.ebuild:
  Drop old clamav-0.96.1, not in gentoo-x86 anymore.

  30 Dec 2010; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  +clamav-0.96.5.ebuild:
  Bump to clamava-0.96.5.

  30 Dec 2010; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  -clamav-0.95.2.ebuild, -clamav-0.95.3.ebuild:
  Drop clamav-0.95.2 and clamav-0.95.3, following the gentoo-x86 repo.

  13 Mar 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> +clamav-0.95.3.ebuild:
  Bump to clamav-0.95.3. Leave 0.95.2 in case if there are regressions.

  12 Mar 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> -clamav-0.94.2.ebuild,
  -clamav-0.94.2-r1.ebuild, -files/clamav-0.94.2-buildfix.patch,
  -files/clamav-0.94.2-nls.patch:
  Remove old versions.

  13 Jul 2009; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> clamav-0.95.2.ebuild,
  +files/clamav-milter.conf, +files/clamav-milter.rc, files/clamd.conf,
  files/clamd.rc, +files/freshclam.conf, +files/freshclam.rc, metadata.xml:
  Fixed clamav-0.95.2.ebuild from Portage. Made initscripts modular.

  03 Jul 2009; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> +files/clamav-0.95.1-nls.patch,
  +clamav-0.95.2.ebuild:
  Imported most of clamav-0.95.2 from Portage.

  01 Jul 2009; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> -clamav-0.94.1.ebuild,