@@ -11,26 +11,24 @@ AUX clamd.rc 1746 RMD160 0158e536289796660479e0aed28ff002b4054923 SHA1 3edad93b3
 AUX freshclam.conf 64 RMD160 39f5a64cadb0f766605b62a2019303b0ef6b0a36 SHA1 8d112cd09865174b7fc96ff4f415c881eab902e1 SHA256 95b8c1aed21f8eafe911d3c8f21a57b1212f7abeb8de32d29aa3cb9248c17c3b
 AUX freshclam.rc 1070 RMD160 cdd42aa9b9999e3c53e3f28443fb0bdf024c426f SHA1 9fc65761d9d9dbb8565d9abb5e634d73304ceede SHA256 436ddaf181cfb3bc84ad6f7a1858fbb5353ad079405016094b4fc0008b7ce28c
 AUX lib-ld.m4 3417 RMD160 7b412510e7ef9966f70ed29937e3556283128a9b SHA1 8b72b8f5f76e41e4ca0f2521c06c568490894a84 SHA256 18c4c458009da32c9daf0ea332a539e5edc82ba009b6c2faac004626313f00e5
-DIST clamav-0.96.5.tar.gz 41164924 RMD160 70c465548395301b83bb2f5428aa383825089af4 SHA1 a7253e30d40e0c03964a60ed589b356a115b26c5 SHA256 83a683d51eceb5aaf0c249efb3d9d95aa4fd8bbc1f05817ab7b1030f6d84d059
 DIST clamav-0.97.tar.gz 41834871 RMD160 bc37a2da03c1d8923da9f28a7e051f6e67db8603 SHA1 68f5a6736b3f67d608c4064ef839777877f09115 SHA256 ec5d88303c0a6e1d8e1354b68ae8c184faee7989aac11dfacff466d9e0471932
-EBUILD clamav-0.96.5.ebuild 4482 RMD160 742d2e71ef9343c58f2328b68d208e86e1f26494 SHA1 85eb9dd2d8ab388c467b2704af08b574b6913085 SHA256 7d97469ff105e47cb6f60203e6619f8cfa9f7d66426973658fe2dc2cc4d0792f
 EBUILD clamav-0.97.ebuild 4139 RMD160 35c151320b7900a3c9377d47c1a83eaf751ef656 SHA1 86741f66018a04708a4235c571c67e8518ebbec3 SHA256 9e58f83020aaa543992fc66919bd65f19dbe4a751354993556f8717bf8d29ba0
-MISC ChangeLog 49753 RMD160 2131d5af1e726c728ba8fced76dde2699f5d00e8 SHA1 2fa560e9323fc14a3cde050d08e22f16fa896a90 SHA256 82aacd763680e7021c5472c4f4363102a1ed1e0782f3232c4166af7d19d89a75
+MISC ChangeLog 49940 RMD160 223c0d8959513482aedc497c4a05df9e2a6b14ac SHA1 8116f2eb41d2de436d6344f6414f0c15981f35eb SHA256 2bd8b0585695deb9a8b8a90ff7e8033b30a6fb4f0bae02cd50c164ce7133ad0b
 MISC metadata.xml 320 RMD160 3546393e30d87f0b0a2fb17e2f15f57dd8c19661 SHA1 b959e38933418e6fc818ed40cd9a4921b8c66102 SHA256 e2a8c4c8bedbffe50a126c1c7395a4d92652c2d95347b9496d54aea1f230a22d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCAAGBQJNjo88AAoJEHQ6UuhrqBBQklAP/j9GHxvReNxpyyW1WOCKeiYD
-2IGZtzdhnoUVKmSVAskiKBqKoxRR75FquE6LxxyjMbbr6CKLpKw4Qb2pQR3llz+h
-fgQhVpvEjUfUh39MOBMjeEwu4Q58NKAqik/nmjc6cM4+xgScvHgXiRuCnAiLOWfK
-wfWrMG34GwRO8BOH3rTcQlh+er/4pHzyXvqgcjN0of0nVlka+y83OQMB9m2/cg4D
-bbo9a8OoT6/m30ofmxNPvxRfG4CGXJRsu8Wm/ZGNJLHoUzqRiJX3wKjWDab7lRfb
-cUyldWBFa/kKXRZX2NwFlxQltF9Wvb4NGa7KBYDo+pzDoPih2z4xIuDr580bv5AZ
-hSNA2TIxMxSH3e2VEjTOskJ+8njkL9YFS8/hrxdrzsLJ+GZqtUgpkzaIhE3127Yt
-scfeUZNlI6WDvbnn6J3a5kn0vEq3xpFbtAz4aYce1mjwPe1j0mALfY/zJGAxu3kd
-4aJ+X8EgFyrriOEPVeoi1Q0nBWjM1t3qmat/CSPaaTycPv+qOi29HnpXtY2z2UhD
-Wiea4R0MkbUqRq7sUwCCFMbmjHgmX67/kYRimWBpnUhN/1MfWcxyHY4jkluVHj0m
-BfdLk9rINNPADIR6tl341YLxbxnjXXFa4mHr8B3uWzDDniMdFFY340GlZvOjIXcW
-z/qsjvN6H3sBDhqX9rJS
-=IC5v
+iQIcBAEBCAAGBQJNjo+ZAAoJEHQ6UuhrqBBQoEwQAIOq1wmI+cAQMR9BFXHZwUJy
+tLdokJodR7pPCv7JTfsp4DIqZ4Nu62DKg3FLicpc1kpirmptPrNhZBbqzkgjedeH
+OFB0nq6ftFnwRPdX/9I+t+U+Esqk7fQiXhqWJhNtKkRweigPbTUpYZZPcoZJX91J
+paZPbBEY5ZnmSTHi6CxL9jUdiWTAP2F9Qgyz9dJlEJdbiHa1F7uq/taSj4fiVT8X
+Dgm4l5HJVtpujhhj6bMXDG7MvOwMjSVILD6q1sYmU4tQ0FBV1lxJ15B5sdEwCkYn
+lUkHhDlX1qEr+NPxwVThCbHaBsoP6+c5C9clUZvn6ucyFBPOKhz4fZilpTLBVPfd
+pYokZ3/f9lhuPc1SlV4F8L0BVkcdL/P5eV77737QO1lTjxiaGLtwfB6gpa9GVB3i
+n9Na6MwaSujOtq32/bWyBmiFY29eiesKUBtMHx6aSJIiFxkA0iWam+2p7n37mUcH
+Cxs0k4BnlTTbmAMEF+G29StBOz8ziFw1R581iyJCyMWeeXtca4NN8++PQ5wEmc0j
+hE/E9qMtaXNzynjWJ8ft8h1hnsTWRApykMh9zBpJKuJ8CTjvSNsPYo8RDXRJUdLc
+V8TsR09KsRNxx/h99vBV5rW2fm/orUQN5U4AGzfRtgmINVc7eYktnvvUiQkW3T4G
+1QJfC7z2Y9xtYTIEgod0
+=WLYV
 -----END PGP SIGNATURE-----
